# lidar-road-segmentation

./: CMakeLists.txt  Grid.h  GridCoord.h  README.md  main.cpp
OccupancyGrid/: OccupancyGrid.cpp  OccupancyGrid.h
kitti/: kitti.cpp  kitti.h
segmentation/: GridMap.h  RoadSegmentation.cpp  RoadSegmentation.h
